--- a/readthedocsext/theme/templates/profiles/private/advertising_profile.html
+++ b/readthedocsext/theme/templates/profiles/private/advertising_profile.html
@@ -3,16 +3,20 @@
 {% load i18n %}
 {% load crispy_forms_tags %}
 
-{% block title %}{% trans "Set advertising preferences" %}{% endblock %}
+{% block title %}
+  {% trans "Set advertising preferences" %}
+{% endblock %}
 {% block profile_admin_advertising %}active{% endblock %}
-{% block edit_content_header %} {% trans "Set advertising preferences" %} {% endblock %}
+{% block edit_content_header %}
+  {% trans "Set advertising preferences" %}
+{% endblock %}
 
 {% block edit_content %}
   {% if request.user.gold.exists or request.user.goldonce.exists %}
     <p>
       {% blocktrans trimmed %}
         Thank you for supporting Read the Docs!
-      {% endblocktrans%}
+      {% endblocktrans %}
     </p>
   {% endif %}
 
@@ -29,7 +33,8 @@
       For more details on advertising on Read the Docs
       including the privacy protections we have in place for users
       and community advertising we run on behalf of the open source community,
-      see <a href="https://docs.readthedocs.io/page/advertising/ethical-advertising.html" target="_blank">our documentation</a>.
+      see <a href="https://docs.readthedocs.io/page/advertising/ethical-advertising.html"
+    target="_blank">our documentation</a>.
     {% endblocktrans %}
   </p>
 
@@ -44,6 +49,10 @@
   <form class="ui form" method="POST" action=".">
     {% csrf_token %}
     {{ form|crispy }}
-    <input class="ui button" type="submit" name="submit" value="{% trans "Update advertisement preference" %}" id="submit"/>
+    <input class="ui button"
+           type="submit"
+           name="submit"
+           value="{% trans "Update advertisement preference" %}"
+           id="submit" />
   </form>
 {% endblock %}
