--- a/readthedocsext/theme/templates/support/success.html
+++ b/readthedocsext/theme/templates/support/success.html
@@ -2,7 +2,9 @@
 
 {% load i18n %}
 
-{% block title %}{% trans "Support request submitted" %}{% endblock %}
+{% block title %}
+  {% trans "Support request submitted" %}
+{% endblock %}
 
 {% block support_form %}
   <div class="ui positive message">
