--- a/readthedocsext/theme/templates/projects/partials/edit/environment_variable_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/environment_variable_list.html
@@ -31,18 +31,17 @@
   </div>
 {% endblock list_placeholder_header %}
 {% block list_placeholder_text %}
-  <a class="ui button" href="https://docs.readthedocs.io/page/guides/environment-variables.html"
+  <a class="ui button"
+     href="https://docs.readthedocs.io/page/guides/environment-variables.html"
      aria-label="{% trans "Learn more about user-defined environment variables in our documentation" %}"
-     target="_blank">
-    {% trans "Learn more" %}
-  </a>
+     target="_blank">{% trans "Learn more" %}</a>
 {% endblock list_placeholder_text %}
 
 {% block list_item_right_buttons %}
   <div class="ui button"
-       data-clipboard-text="{{ object.name }}"
-       {# Translators: past tense as this shown after clicking #}
-       data-content="{% trans "Copied!" %}">
+    data-clipboard-text="{{ object.name }}"
+    {# Translators: past tense as this shown after clicking #}
+    data-content="{% trans "Copied!" %}">
     <i class="fa-solid fa-clipboard icon"></i>
   </div>
 
@@ -73,7 +72,8 @@
       {% else %}
         {% spaceless %}
           {# Avoid exposing short secrets #}
-          {% if object.value|length > 4 %}{{ object.value|slice:"0:4" }}{% endif %}****
+          {% if object.value|length > 4 %}{{ object.value|slice:"0:4" }}{% endif %}
+          ****
         {% endspaceless %}
       {% endif %}
     </code>
