--- a/readthedocsext/theme/templates/support/index.html
+++ b/readthedocsext/theme/templates/support/index.html
@@ -4,7 +4,9 @@
 {% load crispy_forms_tags %}
 
 
-{% block title %}{% trans "Support request" %}{% endblock %}
+{% block title %}
+  {% trans "Support request" %}
+{% endblock %}
 
 {% block content %}
   <h1 class="ui large heading">{% trans "Support request" %}</h1>
@@ -18,14 +20,16 @@
         or let us know if there is an issue with the service.
       </p>
       <p>
-        You can always check out <a href="http://docs.readthedocs.org/en/latest/business/index.html" target="_blank">our documentation</a> as well.
+        You can always check out <a href="https://docs.readthedocs.org/en/latest/business/index.html"
+    target="_blank">our documentation</a> as well.
         It contains a number of answers to common questions and helps you understand the features on our site a bit more.
       </p>
     {% else %}
       <h2 id="usage-questions">Usage questions</h2>
 
       <p>
-        If you have questions about how to use Read the Docs, or have an issue that isn't related to a bug, <a href="http://stackoverflow.com/questions/tagged/read-the-docs" target="_blank">Stack Overflow</a> is the best place to ask. Tag questions with <span class="pre">read-the-docs</span> so other folks can find them easily.
+        If you have questions about how to use Read the Docs, or have an issue that isn't related to a bug, <a href="https://stackoverflow.com/questions/tagged/read-the-docs"
+    target="_blank">Stack Overflow</a> is the best place to ask. Tag questions with <span class="pre">read-the-docs</span> so other folks can find them easily.
       </p>
 
       <p>
@@ -38,7 +42,8 @@
       <p>
         If you have an issue with the actual functioning of the site,
         you can file bug reports on our <a href="https://github.com/readthedocs/readthedocs.org/issues">GitHub issue tracker</a>.
-        You can also <a href="http://docs.readthedocs.io/page/contribute.html" target="_blank">contribute</a> to Read the Docs,
+        You can also <a href="https://docs.readthedocs.io/page/contribute.html"
+    target="_blank">contribute</a> to Read the Docs,
         as the code is open source.
       </p>
 
@@ -60,7 +65,7 @@
 
     {% if not SUPPORT_FORM_ENDPOINT %}
       <p>
-        Please send an email to <a href="mailto:{{SUPPORT_EMAIL }}">{{ SUPPORT_EMAIL }}</a>
+        Please send an email to <a href="mailto:{{ SUPPORT_EMAIL }}">{{ SUPPORT_EMAIL }}</a>
         and we will get back to you as soon as possible.
       </p>
     {% else %}
@@ -69,17 +74,18 @@
         and we will get back to you as soon as possible.
       </p>
 
-      <form
-        class="ui form"
-        method="POST"
-        name="support-request"
-        action="{{ SUPPORT_FORM_ENDPOINT }}"
-        enctype="multipart/form-data"
-        accept-charset="utf-8">
+      <form class="ui form"
+            method="POST"
+            name="support-request"
+            action="{{ SUPPORT_FORM_ENDPOINT }}"
+            enctype="multipart/form-data"
+            accept-charset="utf-8">
 
         {{ form|crispy }}
 
-        <input class="ui primary button" type="submit" value="Submit support request" />
+        <input class="ui primary button"
+               type="submit"
+               value="Submit support request" />
       </form>
     {% endif %}
   {% endblock support_form %}
